# youtube-sentiment-classifier

./: LICENSE  README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt  requirements_local.txt  setup.py
.github/workflows/: cicd.yml
artifacts/: model.pkl  vectorizer.pkl
data/: cleaned_comments.csv  comments.csv  final_features.csv  labeled_comments.csv  sentiment_cache.db  test.csv  train.csv  video_details.csv
experiments/: eda.ipynb  feature_selection.ipynb  model_training.ipynb  test.csv  train.csv
src/components/: data_cleaning.py  data_ingestion.py  data_transformation.py  database.py  feature_extraction.py  model_predictor.py  model_trainer.py
src/exception/: __init__.py
src/logger/: __init__.py
templates/: index.html
